--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-aiohttp
-async-timeout
-attrs
-cffi
-chardet
-discord
-discord.py
-idna
-multidict
-pip
-pycparser
-PyNaCl
-setuptools
-six
-websockets
-yarl
-youtube-dl
+aiohttp==3.6.2
+async-timeout==3.0.1
+discord==1.0.1
+discord.py==1.3.3
+pycparser==2.20
+PyNaCl==1.4.0
+youtube-dl==2020.5.29
