--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aiohttp==3.6.2
 async-timeout==3.0.1
-discord==1.0.1
-discord.py==1.3.3
+git+https://github.com/Rapptz/discord.py
 pycparser==2.20
 PyNaCl==1.4.0
 youtube-dl==2020.5.29
