--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,29 @@ repositories {
     maven {
         url 'https://maven.arbjerg.dev/snapshots'
     }
+    maven {
+        name "topiWTFReleases"
+        url "https://maven.topi.wtf/releases"
+    }
+    maven {
+        url 'https://m2.dv8tion.net/releases'
+    }
 }
 
 dependencies {
     implementation "dev.arbjerg:lavalink-client:da79998defe6709bc9eb1cb5f625cdba5d9aa937-SNAPSHOT"
     implementation "net.dv8tion:JDA:5.0.0-beta.15"
+    implementation "com.github.topi314.lavasearch:lavasearch:1.0.0-beta.2"
+    implementation "com.github.topi314.lavasrc:lavasrc:4.0.0-beta.7"
 
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'org.slf4j:slf4j-simple:2.0.9'
+
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 
 }
 
