--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ repositories {
     maven {
         url 'https://m2.dv8tion.net/releases'
     }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
     implementation "dev.arbjerg:lavalink-client:da79998defe6709bc9eb1cb5f625cdba5d9aa937-SNAPSHOT"
+    implementation "dev.arbjerg:lavaplayer:2.0.2"
     implementation "net.dv8tion:JDA:5.0.0-beta.15"
     implementation "com.github.topi314.lavasearch:lavasearch:1.0.0-beta.2"
     implementation "com.github.topi314.lavasrc:lavasrc:4.0.0-beta.7"
