--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -20,5 +20,5 @@ jobs:
 
     - name: Deploy to VPS
       run: |
-        scp -r / username@your_vps_ip:/path/to/destination
-        ssh username@your_vps_ip "cd /path/to/destination && ./restart_script.sh"
+        scp -r / ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ secrets.VPS_WORKING_DIRECTORY }}
+        ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} "cd ${{ secrets.VPS_WORKING_DIRECTORY }} && ./deploy-prod.sh"
