--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Remove known_hosts
+      run: /rm -f $HOME/.ssh/known_hosts
+
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
