--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Remove known_hosts
-      run: /rm -f $HOME/.ssh/known_hosts
+      run: rm -f $HOME/.ssh/known_hosts
 
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
