--- a/application.yml
+++ b/application.yml
@@ -9,17 +9,18 @@ plugins:
       - "ytsearch:\"%ISRC%\"" # Will be ignored if track does not have an ISRC. See https://en.wikipedia.org/wiki/International_Standard_Recording_Code
       - "ytsearch:%QUERY%" # Will be used if track has no ISRC or no track could be found for the ISRC
       - "ymsearch:%QUERY%"
+      - "spsearch:%QUERY%"
       #  you can add multiple other fallback sources here
     sources:
-      spotify: false # Enable Spotify source
+      spotify: true # Enable Spotify source
       applemusic: false # Enable Apple Music source
       deezer: false # Enable Deezer source
       yandexmusic: true # Enable Yandex Music source
       flowerytts: true # Enable Flowery TTS source
       youtube: true # Enable YouTube search source (https://github.com/topi314/LavaSearch)
     spotify:
-      clientId: "your client id"
-      clientSecret: "your client secret"
+      clientId: "befb6fea3b3744578c840f73cd157dcf"
+      clientSecret: "119935edae9444e5b7f0f3330c22f008"
       countryCode: "US" # the country code you want to use for filtering the artists top tracks. See https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
       playlistLoadLimit: 6 # The number of pages at 100 tracks each
       albumLoadLimit: 6 # The number of pages at 50 tracks each
