--- a/application.yml
+++ b/application.yml
@@ -42,15 +42,15 @@ plugins:
       accessToken: "AQAAAAAQZs1CAAG8XjWJXJC1gUq1nLyhOwI9bUI" # the token used for accessing the yandex music api. See https://github.com/TopiSenpai/LavaSrc#yandex-music
     flowerytts:
       voice: "Alena" # (case-sensitive) get default voice from here https://api.flowery.pw/v1/tts/voices
-      translate: false # whether to translate the text to the native language of voice
+      translate: true # whether to translate the text to the native language of voice
       silence: 0 # the silence parameter is in milliseconds. Range is 0 to 10000. The default is 0.
       speed: 1.0 # the speed parameter is a float between 0.5 and 10. The default is 1.0. (0.5 is half speed, 2.0 is double speed, etc.)
       audioFormat: "ogg_opus" # supported formats are: mp3, ogg_opus, ogg_vorbis, aac, wav, and flac. Default format is mp3
 lavalink:
   plugins:
-    - dependency: "com.github.topi314.lavasearch:lavasearch-plugin:1.0.0-beta.2"
+    - dependency: "com.github.topi314.lavasearch:lavasearch-plugin:1.0.0"
       repository: "https://maven.topi.wtf/releases"
-    - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.0.0-beta.7"
+    - dependency: "com.github.topi314.lavasrc:lavasrc:4.0.1"
       repository: "https://maven.topi.wtf/releases"
   pluginsDir: "./plugins"
   server:
