--- a/application.yml
+++ b/application.yml
@@ -50,7 +50,7 @@ lavalink:
   plugins:
     - dependency: "com.github.topi314.lavasearch:lavasearch-plugin:1.0.0"
       repository: "https://maven.topi.wtf/releases"
-    - dependency: "com.github.topi314.lavasrc:lavasrc:4.0.1"
+    - dependency: "com.github.topi314.lavasrc:lavasrc-plugin:4.0.1"
       repository: "https://maven.topi.wtf/releases"
   pluginsDir: "./plugins"
   server:
@@ -133,3 +133,4 @@ logging:
     rollingpolicy:
       max-file-size: 1GB
       max-history: 30
+debug: true
