feat: sentry support

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'org.jetbrains.kotlin.jvm'
+    id "io.sentry.jvm.gradle" version "4.4.0"
 }
 
 group 'org.serje3'
@@ -98,4 +99,15 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "17"
     }
+}
+
+sentry {
+    // Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
+    // This enables source context, allowing you to see your source
+    // code as part of your stack traces in Sentry.
+    includeSourceContext = true
+
+    org = "sergey-erin"
+    projectName = "java"
+    authToken = System.getenv("SENTRY_AUTH_TOKEN")
 }
