--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.VPS_HOST }}
+          host: ${{ secrets.VPS_IP }}
           username: ${{ secrets.VPS_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd ${{ secrets.APPLICATION_PATH }}
+            cd ${{ secrets.VPS_WORKING_DIRECTORY }}
             rm -f *.jar # Удаление всех JAR-файлов из директории
             artifact_url=$(curl -L -s -o /dev/null -w "%{url_effective}" -H "Authorization: Bearer ${{ secrets.USER_TOKEN }}" -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" "https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }}/zip")
             wget $artifact_url -O app.zip
